--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -49,7 +49,7 @@
     <string name="current_location">Position actuelle</string>
     <string name="latitude">Latitude:</string>
     <string name="longitude">Longitude:</string>
-    <string name="recorded">Données enregistrées!</string>
+    <string name="recorded">Données enregistrées !</string>
     <string name="not_recorded">Données non enregistrées !</string>
     <string name="perms_revoked">Carte indisponible car\nles permissions de localisation\nont été refusées !</string>
     <string name="network_unavailable">Réseau indisponible !</string>
@@ -59,6 +59,7 @@
     <string name="no_label">sans étiquette</string>
     <string name="photo_deleted">Photo \"%s\" supprimée !</string>
     <string name="invalid_input">Erreur ! Seuls des chiffres sont autorisés !</string>
+    <string name="latlng_error">Impossible de récupérer la latitude et la longitude de l\'adresse!</string>
     <string name="general_error">Une erreur est survenue !</string>
 
     <!-- AGENT OR TYPE OF PROPERTY -->
