--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="current_location">Current location</string>
     <string name="latitude">Latitude:</string>
     <string name="longitude">Longitude:</string>
+    <string name="unavailable">Unavailable</string>
     <string name="recorded">Data recorded!</string>
     <string name="not_recorded">Data not recorded!</string>
     <string name="perms_revoked">The map is unavailable because\nlocation permissions\nhave been revoked!</string>
