--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,6 +51,7 @@
     <string name="longitude">Longitude:</string>
     <string name="unavailable">Indisponible</string>
     <string name="recorded">Données enregistrées !</string>
+    <string name="property_added">Propriété ajoutée à la liste !</string>
     <string name="not_recorded">Données non enregistrées !</string>
     <string name="perms_revoked">Carte indisponible car\nles permissions de localisation\nont été refusées !</string>
     <string name="network_unavailable">Réseau indisponible !</string>
