--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="unavailable">Unavailable</string>
     <string name="recorded">Data recorded!</string>
     <string name="not_recorded">Data not recorded!</string>
+    <string name="property_added">Property added to list!</string>
     <string name="perms_revoked">The map is unavailable because\nlocation permissions\nhave been revoked!</string>
     <string name="network_unavailable">Network unavailable!</string>
     <string name="address_incomplete">Address incomplete!</string>
