--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -63,6 +63,7 @@
     <string name="invalid_input">Erreur ! Seuls des chiffres sont autorisés !</string>
     <string name="latlng_error">Impossible de récupérer la latitude et la longitude de l\'adresse!</string>
     <string name="general_error">Une erreur est survenue !</string>
+    <string name="unknown">Inconnu</string>
 
     <!-- AGENT OR TYPE OF PROPERTY -->
     <string name="_unassigned_">Non attribué</string>
