--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,9 +53,10 @@
     <string name="recorded">Data recorded!</string>
     <string name="not_recorded">Data not recorded!</string>
     <string name="property_added">Property added to list!</string>
-    <string name="perms_revoked">The map is unavailable because\nlocation permissions\nhave been revoked!</string>
+    <string name="loc_perms_revoked">The map is unavailable because\nlocation permissions\nhave been revoked!</string>
     <string name="network_unavailable">Network unavailable!</string>
     <string name="address_incomplete">Address incomplete!</string>
+    <string name="camera_perm_revoked">Camera permission denied!</string>
     <string name="photo_deletion_dialog_title">Photo deletion confirmation</string>
     <string name="photo_deletion_dialog_text">Delete photo %s?</string>
     <string name="no_label">without label</string>
