--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,8 @@
     <string name="unknown">Unknown</string>
     <string name="min">Min:</string>
     <string name="max">Max:</string>
+    <string name="with_photo">With\nphoto</string>
+    <string name="without_photo">Without\nphoto</string>
 
     <!-- AGENT OR TYPE OF PROPERTY -->
     <string name="_unassigned_">Unassigned</string>
