--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,11 @@
     <string name="search_title">MULTI-CRITERIA SEARCH</string>
     <string name="search_info">See the results at the bottom of the screen after validation of the criteria in the menu at the top right</string>
     <string name="search_results">SEARCH RESULTS</string>
+    <string name="loan_title">LOAN CALCULATOR</string>
+    <string name="loan_amount">Loan amount</string>
+    <string name="loan_term">Loan term</string>
+    <string name="years">Years:</string>
+    <string name="months">Months:</string>
 
     <!-- AGENT OR TYPE OF PROPERTY -->
     <string name="_unassigned_">Unassigned</string>
@@ -159,6 +164,8 @@
     <string name="cd_button_clear" translatable="false">button_clear</string>
     <string name="cd_button_clear_all" translatable="false">button_clear_all</string>
     <string name="cd_button_to_top" translatable="false">button_to_top</string>
+    <string name="cd_loan_amount" translatable="false">loan_amount</string>
+    <string name="cd_loan_term" translatable="false">loan_term</string>
     <string name="lb_tab_color_anim" translatable="false">tab_color_anim</string>
 
     <!-- CURRENCY -->
